# ProjectTemplateShellApp

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
app/: CMakeLists.txt
app/sources/: ExampleApp.cpp  ExampleApp.hpp  main.cpp
debian/: copyright  package_description
test/: CMakeLists.txt  CommonTestTargets.cmake  GenerateTest.cmake
test/ExampleApp/: CMakeLists.txt  ExampleApp_test.cpp
test/ExamplePrivateClass/: CMakeLists.txt
test/TestTemplate/: CMakeLists.txt
